Fix API compatibility. Proper type declaration in C++.